Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/css/printing.css
+++ b/src/main/webapp/resources/css/printing.css
@@ -54,7 +54,7 @@ root {
         width: 95%;
         height: 95%;
         padding: 0px;
-        font-size: 180%;
+        /*font-size: 180%;*/
     }
 
     .fiveinchbillBreak{
