Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -85,9 +85,9 @@
                 </h:panelGroup>
             </div>
         </div>
-        <div class="row" >
+        <div class="row w-100" style="bottom: 0; position: fixed;" >
             <div class="col-12" >
-                <p:messages id="publicGrowl" showDetail="true" ></p:messages>
+                <p:messages id="publicGrowl" showDetail="true" closable="true" ></p:messages>
             </div>
         </div>
 
