Closes #1633 Signed-off-by: Buddhika <buddhika@cacore-app-server-2.asia-southeast1-c.c.my-project-1537433467858.internal>

--- a/src/main/webapp/resources/template/template.xhtml
+++ b/src/main/webapp/resources/template/template.xhtml
@@ -79,7 +79,7 @@
             <ez:first_login/>
         </h:panelGroup>
         <div class="d-flex justify-content-center align-items-center">
-            <p:growl id="growl"  sticky="true" />
+            <p:growl id="growl" life="2000"  />
 <!--            <p:messages class="w-75 text-center " id="publicGrowl"  closable="true" ></p:messages>-->
         </div>
 
