--- a/src/main/webapp/resources/css/ohmis.css
+++ b/src/main/webapp/resources/css/ohmis.css
@@ -38,3 +38,19 @@
     height: 50px;
     width: 100px;
 }
+
+
+/* Style for screen (if needed) */
+.prescription-text .ql-container.ql-snow {
+    /* Your default styles here */
+}
+
+/* Style for printing */
+@media print {
+    .prescription-text .ui-texteditor .ql-container.ql-snow,
+    .prescription-text .ql-container.ql-snow {
+        border: none !important;
+    }
+}
+
+
