Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/css/ohmis.css
+++ b/src/main/webapp/resources/css/ohmis.css
@@ -45,3 +45,16 @@
         
 }
 
+
+/* Style for screen (if needed) */
+.prescription-text .ql-container.ql-snow {
+    /* Your default styles here */
+}
+
+/* Style for printing */
+@media print {
+    .prescription-text .ui-texteditor .ql-container.ql-snow,
+    .prescription-text .ql-container.ql-snow {
+        border: none !important;
+    }
+}
