--- a/src/main/webapp/resources/css/ohmis.css
+++ b/src/main/webapp/resources/css/ohmis.css
@@ -3,8 +3,21 @@
     font-size: xx-large ;
 }
 
+th.align-right-header .ui-column-title {
+    text-align: right !important;
+}
 
+.align-right-header .ui-column-title {
+    text-align: right !important;
+}
 
+.discharged-color {
+    color: red;
+}
+
+.not-discharged-color {
+    color: green;
+}
 
 
 .standedicon{
@@ -27,11 +40,11 @@
 }
 
 .dxicon {
-  background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm1-12h-2V6h-2v2H8v2h2v2h2v-2h2v-2h-2z"/></svg>') no-repeat center;
-  background-size: contain;
-  display: inline-block;
-  width: 24px;
-  height: 24px;
+    background: url('data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8zm1-12h-2V6h-2v2H8v2h2v2h2v-2h2v-2h-2z"/></svg>') no-repeat center;
+    background-size: contain;
+    display: inline-block;
+    width: 24px;
+    height: 24px;
 }
 
 .testRed{
@@ -41,8 +54,8 @@
     width: 100px;
 }
 .printingOnly{
-        display: none!important;
-        
+    display: none!important;
+
 }
 
 
